wlp/wlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wlp
spec:
  type: ClusterIP
  selector:
    app: wlp
  ports:
  - protocol: TCP
    port: 9080
