wlp/wlp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wlp
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /wlp
        backend:
          serviceName: wlp
          servicePort: 9080
